# iceberg-python

./: .asf.yaml  .codespellrc  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .python-version  404.html  AGENTS.md  CNAME  EQUALITY_DELETE_POC_SUMMARY.md  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  SECURITY-THREAT-MODEL.md  VORTEX_PERFORMANCE_ANALYSIS.md  build-module.py  contribute.md  debug_types.py  debug_vortex_types.py  demo_vortex_real_world.py  example_add_equality_delete.py  final_vortex_expr_test.py  index.html  inspect_vortex.py  inspect_vortex_expr.py  investigate_vortex_expr_objects.py  objects.inv  package-lock.json  package.json  pyproject.toml  release-announcement-email.txt  ruff.toml  setup.py  sitemap.xml  test.ipynb  test_add_equality_delete.py  test_equality_delete_poc.py  test_parquet_filtering.py  (+1 more)
.github/: dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: iceberg_bug_report.yml  iceberg_improvement.yml  iceberg_question.yml
.github/workflows/: CI.yml  check-md-link.yml  codeql.yml  license_check.yml  nightly-pypi-build.yml  pypi-build-artifacts.yml  python-ci-docs.yml  python-ci-polaris.yml  python-ci.yml  python-integration.yml  python-release-docs.yml  python-release.yml  stale.yml  svn-build-artifacts.yml  zizmor.yml
SUMMARY/: index.html
api/: index.html
cli/: index.html
community/: index.html
configuration/: index.html
contributing/: index.html
dev/: .rat-excludes  Dockerfile  check-license  docker-compose-azurite.yml  docker-compose-gcs-server.yml  docker-compose-integration.yml  docker-compose-polaris.yml  docker-compose-rest-server.yml  docker-compose-trino.yml  docker-compose.yml  entrypoint.sh  polaris_creds.env  provision.py  provision_polaris.py  run-azurite.sh  run-gcs-server.sh  run-minio.sh  run-rest-server.sh  run-trino.sh  spark-defaults.conf  test-polaris.sh
dev/hive/: Dockerfile  core-site.xml
dev/rest-server/: .pyiceberg.yaml  Dockerfile  main.py
dev/spark/: Dockerfile  spark-defaults.conf
dev/trino/: config.properties
docs/: dynamodb_localstack_guide.md
expression-dsl/: index.html
how-to-release/: index.html
kevinliu_blmt/data/: d1824054-4f75-4ef0-a193-c543d68548e6-b47029d23aa9334f-f-00000-of-00001.parquet
kevinliu_blmt/metadata/: 5745cfd0-32b6-43b6-af3a-a520d476eacb-585fd8f2f45f5d2c-f-00000-of-00001.avro  5745cfd0-32b6-43b6-af3a-a520d476eacb-585fd8f2f45f5d2c-f-manifest-list-00000-of-00001.avro  v0.metadata.json  v1727125782.metadata.json  version-hint.text
mkdocs/: README.md  gen_doc_stubs.py  mkdocs.yml  requirements.txt
mkdocs/docs/: SUMMARY.md  api.md  cli.md  community.md  configuration.md  contributing.md  expression-dsl.md  feature-support.md  geospatial.md  how-to-release.md  index.md  migration-guide.md  multi-part-namespace.md  nightly-build.md  practical-examples.md  pyiceberg_pyarrow_mapping.md  recipe-count.md  row-filter-syntax.md  troubleshooting.md  verify-release.md
mkdocs/overrides/: main.html
nightly-build/: index.html
notebooks/: basic_pyiceberg_example.ipynb  csv_migration_example.ipynb  duckdb_integration_example.ipynb  integration_duckdb_example.ipynb  pyiceberg_example.ipynb  spark_integration_example.ipynb  time_travel_example.ipynb
pyiceberg/: __init__.py  conversions.py  environment_context.py  exceptions.py  manifest.py  partitioning.py  schema.py  serializers.py  transforms.py  type_mapping.py  typedef.py  types.py
pyiceberg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pyiceberg/avro/: __init__.py  decoder.py  decoder_fast.c  decoder_fast.html  decoder_fast.pyi  decoder_fast.pyx  encoder.py  encoder_fast.pyi  encoder_fast.pyx  file.py  reader.py  resolver.py  writer.py
pyiceberg/catalog/: __init__.py  _meta.py  bigquery_metastore.py  dynamodb.py  glue.py  hive.py  in_memory.py  memory.py  noop.py  rest.py  s3tables.py  snowflake.py  snowflake_catalog.py  sql.py
pyiceberg/cli/: console.py  output.py
pyiceberg/encryption/: __init__.py  ciphers.py  io.py  key_metadata.py  kms.py  manager.py
pyiceberg/expressions/: __init__.py  bloom_filter.py  iterative_visitors.py  literals.py  parser.py  residual_evaluator.py  visitors.py
pyiceberg/io/: __init__.py  fileformat.py  fsspec.py  locations.py  pyarrow.py  vortex.py  vortex_optimized.py
pyiceberg/table/: __init__.py  bloom_filter.py  delete_file_index.py  deletion_vector.py  deletions.py  encryption.py  inspect.py  locations.py  maintenance.py  merge_rows_util.py  metadata.py  name_mapping.py  optimize.py  partition_statistics.py  puffin.py  refs.py  snapshots.py  sorting.py  statistics.py  test_scan_count.py  theta_sketch.py  upsert_util.py
pyiceberg/utils/: _deprecations.py  arrow_sorting.py  bin_packing.py  build_info.py  concurrent.py  config.py  datetime.py  decimal.py  deprecated.py  geospatial.py  hadoop_credentials.py  lazydict.py  pagination.py  partition_map.py  properties.py  retry.py  schema_conversion.py  singleton.py  snapshot.py  sorting.py  wap.py
pyiceberg/view/: __init__.py  metadata.py
reference/SUMMARY/: index.html
reference/pyiceberg/: index.html
row-filter-syntax/: index.html
search/: search_index.json
spielerij/: write.ipynb
tests/: conftest.py  test_api.py  test_avro_sanitization.py  test_benchmark.py  test_conversions.py  test_environment_context.py  test_integration.py  test_integration_manifest.py  test_integration_read.py  test_integration_write.py  test_manifest.py  test_schema.py  test_serializers.py  test_transforms.py  test_typedef.py  test_types.py  test_version.py  test_view.py
tests/api/: test_api.py
tests/avro/: test_decoder.py  test_encoder.py  test_file.py  test_reader.py  test_resolver.py  test_writer.py
tests/benchmark/: README.md  _instrumentation.py  bench_add_files_dup_check.py  benchmark_vortex_vs_parquet.py  production_benchmark.py  quick_benchmark.py  run_scalene.sh  test_add_files_dup_check_benchmark.py  test_arrow_scan_benchmark.py  test_benchmark.py  test_memory_benchmark.py  test_read_benchmark.py  test_vortex_vs_parquet_performance.py  vortex_benchmark.py
verify-release/: index.html
(+277 files in other folders)
