[project]
name = "pyiceberg"
version = "0.10.0"
description = "Apache Iceberg is an open table format for huge analytic datasets"
authors = [{ name = "Apache Software Foundation", email = "dev@iceberg.apache.org" }]
requires-python = ">=3.9.2,<4.0.0,!=3.9.7"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mmh3>=4.0.0,<6.0.0",
    "requests>=2.20.0,<3.0.0",
    "click>=7.1.1,<9.0.0",
    "rich>=10.11.0,<15.0.0",
    "strictyaml>=1.7.0,<2.0.0", # CVE-2020-14343 was fixed in 5.4.
    "pydantic>=2.0,<3.0,!=2.4.0,!=2.4.1,<2.12.0", # 2.4.0, 2.4.1, 2.12.0 has a critical bug
    "sortedcontainers==2.4.0",
    "fsspec>=2023.1.0",
    "pyparsing>=3.1.0,<4.0.0",
    "tenacity>=8.2.3,<10.0.0",
    "pyroaring>=1.0.0,<2.0.0",
    "cachetools>=5.5,<7.0",
]

[project.optional-dependencies]
pyarrow = [
    "pyarrow>=17.0.0",
    "pyiceberg-core>=0.5.1,<0.7.0",
]
pandas = [
    "pandas>=1.0.0,<3.0.0",
    "pyarrow>=17.0.0",
]
duckdb = [
    "duckdb>=0.5.0,<2.0.0",
    "pyarrow>=17.0.0",
]
ray = [
    "ray>=2.10.0,<=2.44.0",
    "pyarrow>=17.0.0",
    "pandas>=1.0.0,<3.0.0",
]
bodo = ["bodo>=2025.7.4"]
daft = ["daft>=0.5.0"]
polars = ["polars>=1.21.0,<2"]
snappy = ["python-snappy>=0.6.0,<1.0.0"]
hive = ["thrift>=0.13.0,<1.0.0"]
hive-kerberos = [
    "thrift>=0.13.0,<1.0.0",
    "thrift-sasl>=0.4.3",
    "kerberos>=1.3.1,<2",
]
s3fs = ["s3fs>=2023.1.0"]
glue = ["boto3>=1.24.59"]
adlfs = ["adlfs>=2024.7.0"]
dynamodb = ["boto3>=1.24.59"]
bigquery = ["google-cloud-bigquery>=3.33.0,<4"]
zstandard = ["zstandard>=0.13.0,<1.0.0"]
sql-postgres = [
    "sqlalchemy>=2.0.18,<3",
    "psycopg2-binary>=2.9.6",
]
sql-sqlite = ["sqlalchemy>=2.0.18,<3"]
gcsfs = ["gcsfs>=2023.1.0"]
rest-sigv4 = ["boto3>=1.24.59"]
hf = ["huggingface-hub>=0.24.0"]
pyiceberg-core = ["pyiceberg-core>=0.5.1,<0.7.0"]
datafusion = ["datafusion>=45,<49"]
gcp-auth = ["google-auth>=2.4.0"]

[project.urls]
Homepage = "https://py.iceberg.apache.org/"
Repository = "https://github.com/apache/iceberg-python"

[project.scripts]
pyiceberg = "pyiceberg.cli.console:run"

[dependency-groups]
dev = [
    "pytest==7.4.4",
    "pytest-checkdocs==2.13.0",
    "prek>=0.2.1,<0.3",
    "pytest-lazy-fixture==0.6.3",
    "fastavro==1.12.0",
    "coverage[toml]>=7.4.2,<8",
    "requests-mock==1.12.1",
    "moto[server]>=5.0.2,<6",
    "typing-extensions==4.15.0",
    "pytest-mock==3.15.1",
    "pyspark[connect]==4.0.1",
    "protobuf==5.29.5", # match Spark Connect's gencode
    "cython==3.1.4",
    "deptry>=0.14,<0.24",
    "docutils!=0.21.post1",
    "mypy-boto3-glue>=1.28.18",
    "mypy-boto3-dynamodb>=1.28.18",
]
# for mkdocs
docs = [
    "mkdocs==1.6.1",
    "griffe==1.14.0",
    "jinja2==3.1.6",
    "mkdocstrings==0.30.1",
    "mkdocstrings-python==1.18.2",
    "mkdocs-literate-nav==0.6.2",
    "mkdocs-autorefs==1.4.3",
    "mkdocs-gen-files==0.5.0",
    "mkdocs-material==9.6.21",
    "mkdocs-material-extensions==1.3.1",
    "mkdocs-section-index==0.3.10",
]

[tool.uv]
default-groups = [
    "dev",
    "docs",
]

[tool.hatch.build.targets.sdist]
include = [
    "pyiceberg",
    "vendor/fb303",
    "vendor/hive_metastore",
    "tests",
    "Makefile",
    "NOTICE",
    "dev",
    "uv.lock",
]

[tool.hatch.build.targets.wheel]
include = [
    "pyiceberg",
    "vendor/fb303",
    "vendor/hive_metastore",
    "NOTICE",
    "pyiceberg/**/*.so",
    "pyiceberg/**/*.pyd",
]

[tool.hatch.build.targets.wheel.sources]
"vendor/fb303" = "fb303"
"vendor/hive_metastore" = "hive_metastore"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.mypy.overrides]]
module = "pytest_mock.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyarrow.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "snappy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "zstandard.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pydantic.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pydantic_core.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fastavro.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mmh3.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "hive_metastore.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "thrift.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "requests_mock.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "click.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rich.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fsspec.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "s3fs.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "azure.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "adlfs.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "gcsfs.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "packaging.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "boto3"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "botocore.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mypy_boto3_glue.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mypy_boto3_dynamodb.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "moto"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aiobotocore.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aiohttp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "duckdb.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ray.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "daft.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyparsing.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyspark.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "strictyaml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sortedcontainers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sqlalchemy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "Cython.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "setuptools.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tenacity.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyiceberg_core.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

markers = [
  "unmarked: marks a test as a unittest",
  "s3: marks a test as requiring access to s3 compliant storage (use with --aws-access-key-id, --aws-secret-access-key, and --endpoint args)",
  "adls: marks a test as requiring access to adls compliant storage (use with --adls.account-name, --adls.account-key, and --adls.endpoint args)",
  "integration: marks integration tests against Apache Spark",
  "gcs: marks a test as requiring access to gcs compliant storage (use with --gs.token, --gs.project, and --gs.endpoint)",
  "benchmark: collection of tests to validate read/write performance before and after a change"
]

# Turns a warning into an error
filterwarnings = [
  "error",
]

[tool.black]
line-length = 130
target-version = ['py38']

[tool.pycln]
all = true

[tool.mypy]
mypy_path = "python"
no_implicit_optional = true
namespace_packages = false
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_untyped_defs = true
implicit_reexport = false

[[tool.mypy.overrides]]
module = "pyarrow.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "snappy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "zstandard.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pydantic.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pydantic_core.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fastavro.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mmh3.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "hive_metastore.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "thrift.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "requests_mock.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "click.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rich.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fsspec.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "s3fs.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "azure.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "adlfs.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "gcsfs.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "huggingface_hub.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "packaging.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "boto3"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "botocore.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mypy_boto3_glue.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "moto"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aiobotocore.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aiohttp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "duckdb.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ray.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "daft.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "bodo.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyparsing.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyspark.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "strictyaml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sortedcontainers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sqlalchemy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "Cython.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "setuptools.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tenacity.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "polars.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "datafusion.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyroaring.*"
ignore_missing_imports = true

[tool.coverage.run]
source = ['pyiceberg/']
