# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0", "wheel", "Cython>=3.0.0", "setuptools"]

[tool.black]
line-length = 130
target-version = ['py38']

[tool.coverage.run]
source = ['pyiceberg/']

[tool.mypy]
disallow_any_generics = true
disallow_untyped_defs = true
implicit_reexport = false
mypy_path = "python"
namespace_packages = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "pytest_mock.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "pyarrow.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "google.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "pandas.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "snappy.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "zstandard.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "pydantic.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "pydantic_core.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "pytest.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "fastavro.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "mmh3.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "hive_metastore.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "thrift.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "requests_mock.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "click.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "rich.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "fsspec.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "s3fs.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "azure.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "adlfs.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "gcsfs.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "packaging.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "tests.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "boto3"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "botocore.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "mypy_boto3_glue.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "mypy_boto3_dynamodb.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "moto"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "aiobotocore.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "aiohttp.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "duckdb.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "ray.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "daft.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "pyparsing.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "pyspark.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "strictyaml.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "sortedcontainers.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "sqlalchemy.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "Cython.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "setuptools.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "tenacity.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "pyiceberg_core.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "google.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "pyarrow.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "pandas.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "snappy.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "zstandard.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "pydantic.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "pydantic_core.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "pytest.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "fastavro.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "mmh3.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "hive_metastore.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "thrift.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "requests_mock.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "click.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "rich.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "fsspec.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "s3fs.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "azure.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "adlfs.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "gcsfs.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "huggingface_hub.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "packaging.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "tests.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "boto3"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "botocore.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "mypy_boto3_glue.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "moto"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "aiobotocore.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "aiohttp.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "duckdb.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "ray.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "daft.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "bodo.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "pyparsing.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "pyspark.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "strictyaml.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "sortedcontainers.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "sqlalchemy.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "Cython.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "setuptools.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "tenacity.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "polars.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "datafusion.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "pyroaring.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "pyarrow.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "pandas.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "snappy.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "zstandard.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "pydantic.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "pydantic_core.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "pytest.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "fastavro.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "mmh3.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "hive_metastore.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "thrift.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "requests_mock.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "click.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "rich.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "fsspec.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "s3fs.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "azure.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "adlfs.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "gcsfs.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "huggingface_hub.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "packaging.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "tests.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "boto3"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "botocore.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "mypy_boto3_glue.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "moto"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "aiobotocore.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "aiohttp.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "duckdb.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "ray.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "daft.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "bodo.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "pyparsing.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "pyspark.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "strictyaml.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "sortedcontainers.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "sqlalchemy.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "Cython.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "setuptools.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "tenacity.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "polars.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "datafusion.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "pyroaring.*"

[tool.poetry]
authors = ["Apache Software Foundation <dev@iceberg.apache.org>"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
description = "Apache Iceberg is an open table format for huge analytic datasets"
homepage = "https://py.iceberg.apache.org/"
include = [
  {path = "dev", format = "sdist"},
  {path = "pyiceberg/**/*.so", format = "wheel"},
  {path = "pyiceberg/**/*.pyd", format = "wheel"},
  {path = "poetry.lock", format = "sdist"}
]
license = "Apache License 2.0"
name = "pyiceberg"
packages = [
  {include = "pyiceberg"},
  {from = "vendor", include = "fb303"},
  {from = "vendor", include = "hive_metastore"},
  {include = "tests", format = "sdist"},
  {include = "Makefile", format = "sdist"},
  {include = "NOTICE", format = [
    "sdist",
    "wheel"
  ]}
]
readme = "README.md"
repository = "https://github.com/apache/iceberg-python"
version = "0.10.0"

[tool.poetry.build]
generate-setup-file = false
script = "build-module.py"

[tool.poetry.dependencies]
adlfs = {version = ">=2024.7.0", optional = true}
bodo = {version = ">=2025.7.4", optional = true}
boto3 = {version = ">=1.24.59", optional = true}
cachetools = ">=5.5,<7.0"
click = ">=7.1.1,<9.0.0"
daft = {version = ">=0.5.0", optional = true}
datafusion = {version = ">=45,<49", optional = true}
duckdb = {version = ">=0.5.0,<2.0.0", optional = true}
fsspec = ">=2023.1.0"
gcsfs = {version = ">=2023.1.0", optional = true}
google-auth = {version = ">=2.4.0", optional = true}
google-cloud-bigquery = {version = "^3.33.0", optional = true}
huggingface-hub = {version = ">=0.24.0", optional = true}
kerberos = {version = "^1.3.1", optional = true}
mmh3 = ">=4.0.0,<6.0.0"
pandas = {version = ">=1.0.0,<3.0.0", optional = true}
polars = {version = "^1.21.0", optional = true}
psycopg2-binary = {version = ">=2.9.6", optional = true}
pyarrow = {version = ">=17.0.0", optional = true}
pydantic = ">=2.0,<3.0,!=2.4.0,!=2.4.1,<2.12.0"  # 2.4.0, 2.4.1, 2.12.0 has a critical bug
pyiceberg-core = {version = ">=0.5.1,<0.7.0", optional = true}
pyparsing = ">=3.1.0,<4.0.0"
pyroaring = ">=1.0.0,<2.0.0"
python = "^3.9.2, !=3.9.7"
python-snappy = {version = ">=0.6.0,<1.0.0", optional = true}
ray = {version = ">=2.10.0,<=2.44.0", optional = true}
requests = ">=2.20.0,<3.0.0"
rich = ">=10.11.0,<15.0.0"
s3fs = {version = ">=2023.1.0", optional = true}
sortedcontainers = "2.4.0"
sqlalchemy = {version = "^2.0.18", optional = true}
strictyaml = ">=1.7.0,<2.0.0"  # CVE-2020-14343 was fixed in 5.4.
tenacity = ">=8.2.3,<10.0.0"
thrift = {version = ">=0.13.0,<1.0.0", optional = true}
thrift-sasl = {version = ">=0.4.3", optional = true}
zstandard = ">=0.13.0,<1.0.0"

[tool.poetry.extras]
adlfs = ["adlfs"]
bigquery = ["google-cloud-bigquery"]
bodo = ["bodo"]
daft = ["daft"]
datafusion = ["datafusion"]
duckdb = ["duckdb", "pyarrow"]
dynamodb = ["boto3"]
gcp-auth = ["google-auth"]
gcsfs = ["gcsfs"]
glue = ["boto3"]
hf = ["huggingface-hub"]
hive = ["thrift"]
hive-kerberos = ["thrift", "thrift_sasl", "kerberos"]
pandas = ["pandas", "pyarrow"]
polars = ["polars"]
pyarrow = ["pyarrow", "pyiceberg-core"]
pyiceberg-core = ["pyiceberg-core"]
ray = ["ray", "pyarrow", "pandas"]
rest-sigv4 = ["boto3"]
s3fs = ["s3fs"]
snappy = ["python-snappy"]
sql-postgres = ["sqlalchemy", "psycopg2-binary"]
sql-sqlite = ["sqlalchemy"]
zstandard = ["zstandard"]

[tool.poetry.group.dev.dependencies]
coverage = {version = "^7.4.2", extras = ["toml"]}
cython = "3.1.4"
deptry = ">=0.14,<0.24"
docutils = "!=0.21.post1"  # https://github.com/python-poetry/poetry/issues/9248#issuecomment-2026240520
fastavro = "1.12.0"
moto = {version = "^5.0.2", extras = ["server"]}
mypy-boto3-dynamodb = ">=1.28.18"
mypy-boto3-glue = ">=1.28.18"
prek = "^0.2.1"
protobuf = "5.29.5"  # match Spark Connect's gencode
pyspark = {version = "4.0.1", extras = ["connect"]}
pytest = "7.4.4"
pytest-checkdocs = "2.13.0"
pytest-lazy-fixture = "0.6.3"
pytest-mock = "3.15.1"
requests-mock = "1.12.1"
typing-extensions = "4.15.0"

[tool.poetry.group.docs.dependencies]
griffe = "1.14.0"
jinja2 = "3.1.6"
# for mkdocs
mkdocs = "1.6.1"
mkdocs-autorefs = "1.4.3"
mkdocs-gen-files = "0.5.0"
mkdocs-literate-nav = "0.6.2"
mkdocs-material = "9.6.21"
mkdocs-material-extensions = "1.3.1"
mkdocs-section-index = "0.3.10"
mkdocstrings = "0.30.1"
mkdocstrings-python = "1.18.2"

[tool.poetry.scripts]
pyiceberg = "pyiceberg.cli.console:run"

[tool.pycln]
all = true

[tool.pytest.ini_options]
# Turns a warning into an error
filterwarnings = [
  "error"
]
markers = [
  "unmarked: marks a test as a unittest",
  "s3: marks a test as requiring access to s3 compliant storage (use with --aws-access-key-id, --aws-secret-access-key, and --endpoint args)",
  "adls: marks a test as requiring access to adls compliant storage (use with --adls.account-name, --adls.account-key, and --adls.endpoint args)",
  "integration: marks integration tests against Apache Spark",
  "gcs: marks a test as requiring access to gcs compliant storage (use with --gs.token, --gs.project, and --gs.endpoint)",
  "benchmark: collection of tests to validate read/write performance before and after a change"
]
testpaths = ["tests"]
